# ChangeLog for app-text/a2ps
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/a2ps/ChangeLog,v 1.82 2008/05/12 15:05:17 jer Exp $

  12 May 2008; Jeroen Roovers <jer@gentoo.org> a2ps-4.14.ebuild:
  Marked ~hppa (bug #221791).

  12 May 2008; Markus Rothe <corsair@gentoo.org> a2ps-4.14.ebuild:
  Added ~ppc64; bug #221791

  12 May 2008; Christian Faulhammer <opfer@gentoo.org> a2ps-4.14.ebuild:
  move from USE=tetex to USE=latex and change virtual/tetex to
  virtual/latex-base; clean up the applied patches; quote some variables; add
  app-text/wdiff as RDEPEND, reported in bug 218796 by Matthias Wieding-Drewes
  <m AT wieding-drewes DOT de>; dropped KEYWORDS for arm, sh, s390, ppc64 and
  hppa

  29 Apr 2008; Raúl Porcel <armin76@gentoo.org> a2ps-4.13c-r6.ebuild:
  ia64 stable wrt #212050

  26 Apr 2008; nixnut <nixnut@gentoo.org> a2ps-4.13c-r6.ebuild:
  Stable on ppc wrt bug 212050

  19 Apr 2008; Markus Rothe <corsair@gentoo.org> a2ps-4.13c-r6.ebuild:
  Stable on ppc64; bug #212050

  19 Apr 2008; Ulrich Mueller <ulm@gentoo.org> a2ps-4.14.ebuild:
  LICENSE is GPL-3 now.

  18 Apr 2008; <ricmm@gentoo.org> a2ps-4.13c-r2.ebuild:
  Drop to ~mips due to unstable deps

  18 Apr 2008; Markus Meier <maekke@gentoo.org> a2ps-4.13c-r6.ebuild:
  amd64/x86 stable, bug #212050

  17 Apr 2008; Ulrich Mueller <ulm@gentoo.org>
  +files/a2ps-4.14-check-mempcpy.patch,
  +files/a2ps-4.14-fix-stpcpy-proto.patch, a2ps-4.14.ebuild:
  Fix compile issues, bug 216588. Thanks to Colin Bennett <colin@gibibit.com>.

  17 Apr 2008; Jeroen Roovers <jer@gentoo.org> a2ps-4.13c-r6.ebuild:
  Stable for HPPA (bug #212050).

  17 Apr 2008; Tobias Klausmann <klausman@gentoo.org> a2ps-4.13c-r6.ebuild:
  Stable on alpha, bug #212050

  17 Apr 2008; Ferris McCormick <fmccor@gentoo.org> a2ps-4.13c-r6.ebuild:
  Sparc stable --- Bug #212050 --- works as always.

  09 Apr 2008; Ulrich Mueller <ulm@gentoo.org> a2ps-4.14.ebuild: